--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "push": "drizzle-kit push:sqlite",
     "drop": "drizzle-kit drop",
     "check": "drizzle-kit check:sqlite",
-    "up": "drizzle-kit up:sqlite",
-    "start": "next start",
-    "lint": "next lint"
+    "up": "drizzle-kit up:sqlite"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -22,7 +22,7 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.1",
     "lucide-react": "^0.294.0",
-    "next": "14.0.3",
+    "next": "13.5.5",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
     "react": "^18",
@@ -39,6 +39,8 @@
     "autoprefixer": "^10.0.1",
     "better-sqlite3": "^9.2.2",
     "drizzle-kit": "^0.20.6",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.5",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
